assets/css/style.css
/* ... */
    .navbar-expand-lg .navbar-nav .nav-item a {
      font-size: 18px;
      font-family: "Raleway", sans-serif;
      font-weight: 400;
      position: relative;
      color: #848484; }

      .navbar-expand-lg .navbar-nav .nav-item a:focus {
        outline: none; }

    .navbar-expand-lg .navbar-nav .dropdown a:focus {
      color: #848484 !important;
      font-weight: 400 !important;
      outline: none; }

    .navbar-expand-lg .navbar-nav .dropdown a:active {
      outline: none; }

    .navbar-expand-lg .navbar-nav .dropdown-toggle::after {
      top: 2px;
      position: relative; }

.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
  color: #0069D9;
  font-weight: 600; }

.navbar-expand-lg .navbar-nav .dropdown-menu {
  margin-top: 18px;
  border-radius: 1px; }

@media screen and (max-width: 767px) {
  .navbar-expand-lg .navbar-nav {
    display: block; } }

.navbar-light .navbar-toggler {
  border: none !important; }

  .navbar-light .navbar-toggler:focus {
    outline: none; }

@media screen and (max-width: 767px) {
  .navbar-expand-lg > .container, .navbar-expand-lg > .container-fluid {
    padding-right: 15px;
    padding-left: 15px; } }

@media screen and (max-width: 767px) {
  .offer-content .offer-level {
    margin-top: 30px; } }

.offer-content {
  margin-bottom: 4em; }

.offer-level {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  background-color: #fff;
  box-shadow: 0 4px 28px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 4px 28px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 4px 28px rgba(0, 0, 0, 0.2);
  padding: 2em 1em;
  margin-top: -40px;
  border-radius: 6px;
  position: relative;
  z-index: 3; }

  .offer-level .heading {
    margin-bottom: 2em; }

    .offer-level .heading h2 {
      font-size: 35px;
      font-family: "Raleway", sans-serif;
      font-weight: 600;
      font-style: normal;
      position: relative;
      text-align: center;
      color: #000; }

      .offer-level .heading h2::after {
        content: '';
        position: absolute;
        border: 2px solid #0069D9;
        left: 48%;
        width: 40px;
        top: 45px; }

  .offer-level .panel-area {
    border-right: 1px solid rgba(0, 0, 0, 0.1);
    margin-bottom: 2em; }

  .offer-level .head-title {
    text-align: center; }

    .offer-level .head-title h1 {
      font-size: 18px;
      font-family: "Raleway", sans-serif;
      font-weight: 600;
      font-style: normal;
      position: relative;
      color: #000;
      vertical-align: middle; }

      .offer-level .head-title h1 span {
        font-size: 40px;
        font-family: "Raleway", sans-serif;
        font-weight: 400;
        color: #0069D9; }

  .offer-level .title p {
    font-size: 14px;
    font-family: "Raleway", sans-serif;
    font-weight: 300;
    font-style: normal;
    position: relative;
    line-height: 22px;
    text-align: left;
    color: #222; }

    .offer-level .title img{
      margin: 0 10px 0 0;
    }

.philosophy-content {
  margin-bottom: 4em; }

  .philosophy-content .heading h5 {
    font-size: 25px;
    font-family: "Raleway", sans-serif;
    font-weight: 600;
    color: #0069D9; }

  .philosophy-content .heading h2 {
    font-size: 40px;
    font-family: "Raleway", sans-serif;
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: 15px; }

    .philosophy-content .heading h2::after {
      content: '';
      position: absolute;
      border: 2px solid #0069D9;
      left: 15px;
      width: 40px;
      top: 80px; }

  .philosophy-content .title p {
    font-size: 16px;
    font-family: "Raleway", sans-serif;
    font-weight: 400;
    font-style: normal;
    vertical-align: middle;
    text-align: left;
    position: relative;
    line-height: 25px;
    color: #222;
    padding-bottom: 15px; }

  .philosophy-content .right-content .heading {
    position: absolute;
    left: 3em; }

    .philosophy-content .right-content .heading h2 {
      color: #fff; }

  .philosophy-content .right-content .img-responsive {
    width: 100%;
    border-radius: 10px;
    margin-top: 20px; }

.parallax-banner {
  background-image: url("../images/banner-bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  height: 20em;
  margin-bottom: 4em;
  position: relative;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  justify-content: center; }

  .parallax-banner::before {
    content: '';
    position: absolute;
    top: 0;
    height: 20em;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%; }

  .parallax-banner .heading {
    text-align: center; }

    .parallax-banner .heading h2 {
      font-size: 40px;
      font-family: "Raleway", sans-serif;
      font-weight: 600;
      text-transform: capitalize;
      color: #fff; }

  .parallax-banner .price-detail {
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    justify-content: center;
    flex-wrap: wrap; }

    .parallax-banner .price-detail .price {
      color: #fff;
      text-align: center;
      font-size: 18px;
      font-weight: 600;
      font-style: normal;
      font-family: "Raleway", sans-serif;
      width: 200px; }

      .parallax-banner .donation-detail {
        display: -webkit-flex;
        display: -ms-flex;
        display: flex;
        justify-content: center;
        flex-wrap: wrap; }

      .parallax-banner .donation-detail .donation {
        color: #fff;
        text-align: left;
        font-size: 18px;
        font-weight: 600;
        font-style: normal;
        font-family: "Raleway", sans-serif;
        line-height: 22px;
        letter-spacing: 2px;
        width: 500px; 
      margin: 1em 0 0 0;}
/* ... */

